objects/nSBA__Use_Of_Proceeds__c.object
<CustomObject>
    <description>The Use Of Proceeds object stores information on how loan proceeds will be categorized and used.</description>
    <fields>
        <fullName>CF_BorrowerInjection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SBA Form 1920</description>
        <label>Borrower Injection</label>
        <referenceTo>nSBA__Injections__c</referenceTo>
        <relationshipLabel>Use Of Proceeds</relationshipLabel>
        <relationshipName>Use_Of_Proceeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Form1920OtherFinancing__c</fullName>
        <description>SBA Form 1920</description>
        <label>Form 1920 Other Financing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_By_Use__c</fullName>
        <formula>nSBA__Proceed_Amount__c + CF_Form1920OtherFinancing__c+CF_BorrowerInjection__r.nSBA__Injection_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total By Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Amount_Disbursed__c</fullName>
        <description>The system automatically populates this optional field to summarize the Amount Disbursed for Use of Proceeds. By default, it is empty.</description>
        <inlineHelpText>This field is used to summarize the Amount Disbursed for Use of Proceeds.</inlineHelpText>
        <label>Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Applicant_Equity_Injection__c</fullName>
        <description>The system automatically populates this optional field to summarize the Applicant Equity Injection for Use of Proceeds. By default, it is empty.</description>
        <inlineHelpText>This field is used to summarize the Applicant Equity Injection for Use of Proceeds.</inlineHelpText>
        <label>Applicant Equity Injection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Application__c</fullName>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Use Of Proceeds</relationshipLabel>
        <relationshipName>Use_Of_Proceeds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__Authorized_Amount_Remaining__c</fullName>
        <description>The system automatically populates this optional field to summarize the Authorized Amount Remaining for Use of Proceeds. By default, it is empty.</description>
        <formula>nSBA__Proceed_Amount__c - nSBA__Amount_Disbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used to summarize the Authorized Amount Remaining for Use of Proceeds.</inlineHelpText>
        <label>Authorized Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Business_Name__c</fullName>
        <description>Name of the Business being purchased. Use this field only for business/stock purchase use of proceeds types. This field is used in SBA Loan Authorization only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the Business being purchased. Use this field only for business/stock purchase use of proceeds types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Description__c</fullName>
        <description>Interim Loan use of Description. Use this field only for Pay Off Interim Loan use of proceeds type. This field is used in SBA Loan Authorization only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Interim Loan use of Description. Use this field only for Pay Off Interim Loan use of proceeds type. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Interim Loan Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Intangible_Asset_Amount__c</fullName>
        <description>The dollar amount of proceeds to be used for the intangible assets in business/stock purchase. Use this field only for business/stock purchase use of proceeds types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>The dollar amount of proceeds to be used for the intangible assets in business/stock purchase. Use this field only for business/stock purchase use of proceeds types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Intangible Asset Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Intangible_Asset_Description__c</fullName>
        <description>Intangible Assets Description. Use this field only for business/stock purchase use of proceeds types. This field is used in SBA Loan Authorization only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Intangible Assets Description. Use this field only for business/stock purchase use of proceeds types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Intangible Assets Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Lender_Name__c</fullName>
        <description>Name of Lender. Use this field only for Pay Off Interim Construction Loan not guaranteed by SBA use of proceeds type. This field is used in SBA Loan Authorization only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of Lender. Use this field only for Pay Off Interim Construction Loan not guaranteed by SBA use of proceeds type. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Lender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_Proceed_Type_Code__c</fullName>
        <description>Indicates how loan proceeds will be used.</description>
        <inlineHelpText>Indicates how loan proceeds will be used.</inlineHelpText>
        <label>Loan Proceed Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Location_City__c</fullName>
        <description>Physical City of Real Estate. Use this field only for Real Estate use of proceeds types. This field is used in SBA Loan Authorization only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Physical City of Real Estate. Use this field only for Real Estate use of proceeds types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Location_State__c</fullName>
        <description>Physical State of Real Estate. Use this field only for Real Estate use of proceeds types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Physical State of Real Estate. Use this field only for Real Estate use of proceeds types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Location_Street__c</fullName>
        <description>Physical Street Address of Real Estate. Use this field only for Real Estate use of proceeds types. This field is used in SBA Loan Authorization only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Physical Street Address of Real Estate. Use this field only for Real Estate use of proceeds types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Location_Zipcode__c</fullName>
        <description>Physical ZIP Code of Real Estate. Use this field only for Real Estate use of proceeds types. This field is used in SBA Loan Authorization only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Physical ZIP Code of Real Estate. Use this field only for Real Estate use of proceeds types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>ZIP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Other_Financing__c</fullName>
        <description>The system automatically populated this optional field to summarize the Other Financing for Use of Proceeds. By default, it is empty.</description>
        <inlineHelpText>This field is used to summarize the Other Financing for Use of Proceeds.</inlineHelpText>
        <label>Other Financing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Proceed_Amount__c</fullName>
        <description>The dollar amount of proceeds to be used for this particular use of proceeds.</description>
        <inlineHelpText>The dollar amount of proceeds to be used for this particular use of proceeds.</inlineHelpText>
        <label>Proceed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Proceed_Other_Type_Text__c</fullName>
        <description>Text that describes this particular use of loan proceeds.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Text that describes this particular use of loan proceeds.</inlineHelpText>
        <label>Proceed Other Type Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Proceed_Type_Code__c</fullName>
        <description>Loan Proceeds Type CodeTable, Proceed Type Table</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Proceed Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Purchase_Agreement_Date__c</fullName>
        <description>Purchase Agreement Date of business purchase. Use this field only for Business Purchase use of proceeds type. This field is used in SBA Loan Authorization only.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Purchase Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__SBA_Loan_Number__c</fullName>
        <description>SBA Loan Number. Use this field only for refinance SBA Loan use of proceeds types. This field is used in SBA Loan Authorization only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>SBA Loan Number. Use this field only for refinance SBA Loan use of proceeds types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Refinanced Loan Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Stockholder_Name__c</fullName>
        <description>Name of Stockholder selling all outstanding stock. Use this field only for business/stock purchase use of proceeds types. This field is used in SBA Loan Authorization only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of Stockholder selling all outstanding stock. Use this field only for business/stock purchase use of proceeds types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Stockholder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_for_Line__c</fullName>
        <description>The system automatically populates this optional field to summarize the Total for Line for Use of Proceeds. By default, it is empty.</description>
        <formula>nSBA__Applicant_Equity_Injection__c + nSBA__Other_Financing__c + nSBA__Proceed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used to summarize the Total for Line for Use of Proceeds.</inlineHelpText>
        <label>Total for Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Use Of Proceeds</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Use Of Proceeds Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Use Of Proceeds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>